# learning

./: .gitignore  README.md  pyproject.toml
oop/: 01_classes_and_attributes.py  02_methods_and_self.py  03_init_and_del.py  04_singleton_and_new.py  05_class_and_static_methods.py  06_access_modes_and_properties.py  07_attribute_dunder_methods.py  08_monostate_pattern.py  09_property_decorator.py  10_properties_final_check.py  11_descriptors_data_protection.py  12_call_rate_limiter.py  13_magic_methods_basics.py.py  14_2_game_time_math.py  14_magic_methods_math.py  15_magic_methods_comparisons.py  16_magic_methods_hash.py  17_magic_method_bool.py  18_magic_methods_containers.py  19_2_magic_methods_infinite_iterator.py  19_magic_methods_iterators.py  20_class_inheritance_overriding.py  21_builtins_inheritance_issubclass.py  22_super_method_delegation.py  23_private_protected_inheritance.py  24_polymorphism_abstract_methods.py  25_slots_memory_optimization.py  26_slots_with_properties_and_inheritance.py  28_exception_handling_intro.py  29_exception_handling_finally_else.py  30_exception_propagation.py  31_custom_exceptions_raise.py  32_context_managers_with.py  33_nested_classes.py  34_35_user_metaclass.py  37_38_dataclasses_fields.py  39_dataclasses_inheritance.py  40_ultimate_oop_ecosystem.py
technologies/: roadmap.md  timeline.md
technologies/Git/: main.py
technologies/PostgreSQL/: 01_select_basics.sql  02_filtering_where.sql  03_sorting_orderby.sql  04_create_alter_table.sql  05_insert_update_delete.sql  06_group_by_basics.sql  07_aggregate_functions.sql  (+17 more)
(+137 files in other folders)
