[project]
name = "learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.138.2",
    "httpx[cli]>=0.28.1",
    "sqlalchemy>=2.0.51",
]

[tool.pyright]
typeCheckingMode = "strict"
